finish css for hompage

--- a/mysql/src/views/registerPage.ejs
+++ b/mysql/src/views/registerPage.ejs
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <diiv class="col-12 mt-3">Create a new user</diiv>
+            <div class="col-12 mt-3">Create a new user</div>
 
             <form method="POST" action="/post">
                 <div class="form-row">
