--- a/booking/client/src/containers/HomePage/Header.scss
+++ b/booking/client/src/containers/HomePage/Header.scss
@@ -2,6 +2,10 @@
     width: 100%;
     height: 110px;
     display: flex;
+    position: fixed;
+    top: 0;
+    background-color: white;
+    z-index: 5;
 
     .left-content {
         width: 25%;
@@ -92,6 +96,7 @@
     border: 1px solid transparent;
     width: 100%;
     height: 500px;
+    margin-top: 100px;
     background: url('../../assets/images/bookingcare-cover-4.jpg');
     background-position: revert;
     background-size: cover;
