--- a/booking/client/src/containers/HomePage/Section/Speciality.scss
+++ b/booking/client/src/containers/HomePage/Section/Speciality.scss
@@ -1,4 +1,6 @@
-.speciality {
+.speciality,
+.hospital-speciality,
+.doctor-speciality {
     background-color: #f5f5f5;
     height: 400px;
     align-items: center;
@@ -62,6 +64,7 @@
                 background: url('../../../assets/images/section/112457-co-xuong-khop.jpg');
                 height: 200px;
                 margin: 10px;
+                z-index: 0;
             }
 
             .slick-title {
@@ -75,4 +78,34 @@
         bottom: -60px;
 
     }
+}
+
+.hospital-speciality {
+    background-color: white;
+}
+
+.doctor-speciality {
+    background-color: #f5f5f5;
+
+    .slick-slider {
+        .slick-child {
+            text-align: center;
+
+            .slick-image {
+                background: url('../../../assets/images/section/snowman.jpeg') center center no-repeat;
+                border-radius: 50%;
+                width: 150px;
+                height: 150px;
+                margin: 10px 0 0 33%
+            }
+
+
+            .slick-sub {
+                font-size: 12px;
+                text-align: center;
+            }
+        }
+    }
+
+
 }
