--- a/booking/client/src/containers/HomePage/Header.scss
+++ b/booking/client/src/containers/HomePage/Header.scss
@@ -21,6 +21,7 @@
             background: url('../../assets/images/bookingcare-2020.svg') center center no-repeat;
             width: 300px;
             height: 100px;
+            cursor: pointer;
         }
     }
 
