--- a/booking/client/src/containers/Detail/Doctor/Booking.scss
+++ b/booking/client/src/containers/Detail/Doctor/Booking.scss
@@ -27,6 +27,10 @@
                 font-size: 15px;
                 margin-bottom: 20px;
             }
+
+            .gender-col {
+                display: grid;
+            }
         }
 
         .booking-footer {
